--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,3 +1,36 @@
+//MOBILE SCREEN LESS THAN 900PX
+// @media screen and (max-width: 899px) {
+//   html {
+//     font-size: 0.9rem;
+//   }
+//   .start-info {
+//     position: relative;
+//     &::before {
+//       content: "";
+//       position: absolute;
+//       width: 100%;
+//       top: 30%;
+//       bottom: 0;
+//       // margin-top: 50%;
+//       background: linear-gradient(rgb(10, 10, 10, 0.8) 0%, rgba(10, 10, 10, 0) 90%);
+//       // backdrop-filter: blur(15px);
+//       border-radius: 2rem 2rem 0 0;
+//       border-top: 5px solid $dark3;
+//     }
+//     .image-container {
+//       background: none !important;
+//       backdrop-filter: blur(0);
+//     }
+//     hr {
+//       opacity: 0;
+//     }
+//     .profile-info {
+//       padding: 0 10%;
+//       // outline: 2px solid red;
+//     }
+//   }
+// }
+
 // SCREENS LARGER THAN 500PX AND ABOVE
 @media screen and (min-width: 900px) {
   // ==== NAVIGATION ====
@@ -40,17 +73,20 @@
       width: 50vw;
       // width: calc(50vw + 5%);
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.23);
+      background-color: $dark-blur;
       backdrop-filter: blur(15px);
       // background-color: rgb(100, 100, 100);
       z-index: -1;
+    }
+    .profile-left {
+      align-items: center;
     }
     .profile-info {
       padding-left: 5%;
       .profile-info-header {
         text-align: left;
       }
-      //   outline: 2px solid yellow;
+      // outline: 2px solid yellow;
     }
     .image-container {
       margin-left: -10%;
@@ -58,9 +94,6 @@
       .profile-image {
         background: $profile-img-small, $light-dark-overlay;
         background-size: cover;
-      }
-      .profile-image-name {
-        font-size: 1.4rem;
       }
     }
   }
